tests/fail/deprecated_tuple.tk
// Copyright (c) 2026 YiZhonghua <zhyi@dpai.com>. All rights reserved.
//
// Deprecated Tuple test to verify parser-level interception.
// EXPECT: error[E0472]

shape MyTuple(i32, string)

pub fn main() -> i32 {
    return 0
}
