tests/fail/deprecated_tuple.stderr
error[E0472]: Tuples are abolished. Shape fields must be named struct fields or tagged enum variants.
 --> tests/fail/deprecated_tuple.tk:6:15
   |
 6 | shape MyTuple(i32, string)
   |               ^
